--- a/AtkTennisWeb/Views/SystemSettings/IdentityRoleSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/IdentityRoleSettings.cshtml
@@ -477,6 +477,8 @@
                 trueList.push($(this).attr("id"));
         })
 
+        debugger;
+
         $.ajax({
             type: "POST",
             url: '../SystemSettings/changeAuthority',
