--- a/AtkTennisWeb/Views/Public/SignIn.cshtml
+++ b/AtkTennisWeb/Views/Public/SignIn.cshtml
@@ -3,6 +3,7 @@
     Layout = null;
 }
 
+
 <!DOCTYPE html>
 
 
@@ -21,19 +22,19 @@
     <div class="login-box">
         <div class="login-logo">
             <img src="~/images/atkimg/altyapilogo.png" alt="Alternate Text" style="width:40%">
-            <h3 style="color:white"> 
+            <h3 style="color:white">
                 <b>TEN-İS</b>
                 <br />
-                 Tenis İşletim Sistemi
+                Tenis İşletim Sistemi
             </h3>
         </div>
-        
+
         <!-- /.login-logo -->
         <div class="card" style="background-color:transparent">
-            <div class="card-body login-card-body" style="background-color:transparent">       
+            <div class="card-body login-card-body" style="background-color:transparent">
                 <div>
                     <div class="input-group mb-3">
-                        <input type="text" id="username" class="form-control" placeholder="Kullanıcı Adı" >
+                        <input type="text" id="username" class="form-control" placeholder="Kullanıcı Adı">
                         <div class="input-group-append">
                             <div class="input-group-text">
                                 <span class="fas fa-envelope"></span>
@@ -51,12 +52,14 @@
                     <div class="row">
                         <div class="col-8">
                             <div class="icheck-primary">
-                                <input type="checkbox" id="remember">
+                                <input type="checkbox" id="checkLocal">
                                 <label for="remember" style="color:wheat">
                                     Beni Hatırla
                                 </label>
                             </div>
                         </div>
+
+                       
                         <!-- /.col -->
                         <div class="col-4">
                             <button type="submit" class="btn btn-warning btn-block" onclick="signIn()">Giriş Yap</button>
@@ -78,7 +81,61 @@
 
 
 <script>
+
+    $(document).ready(function () {
+        $(function () {
+            if (localStorage.getItem("loginCheck") == "true") {
+                $("#checkLocal").prop('checked', true);
+
+                if (localStorage.userName && localStorage.password) {
+
+                    $("#username").val(localStorage.getItem("userName"));
+                    $("#password").val(localStorage.getItem("password"));
+                    
+
+                    var a = localStorage.getItem("userName")
+                    var b = localStorage.getItem("password")
+
+                   
+
+                    $.ajax({
+                        type: "Get",
+                        url: '../Public/SignInReq',
+                        cache: false,
+                        data: { "UserName": a , "Password": b },
+                        dataType: "json",
+                        async: true,
+                        success: function (res) {
+
+                            
+
+                            if (res.NAME <= 0) {
+                                $.confirm({
+                                    title: "Uyarı",
+                                    content: "Kullanıcı Adı ve/veya Şifre Hatalı.",
+                                    buttons: {
+                                        TAMAM: function () {
+
+                                        }
+                                    }
+                                });
+                            }
+                            else {
+                                window.location.href = "../Home/Index";
+                            }
+                        }
+                    });
+
+                }
+            }
+
+        })
+    });
+
+
+
     function signIn() {
+
         try {
             $.ajax({
                 type: "Get",
@@ -89,8 +146,25 @@
                 async: true,
                 success: function (res) {
 
-                    if (res == "true")
-                    {
+                    if (res == "true") {
+                        localStorage.setItem("userName", $("#username").val());
+                        localStorage.setItem("password", $("#password").val());
+
+                        if ($("#checkLocal").is(':checked')) {
+
+                            var check = "true"
+
+                        }                  
+
+                        else {
+
+                            var check = "false"
+                        }
+
+                       
+                        localStorage.setItem("loginCheck", check);
+                        
+                      
                         window.location.href = "../Home/Index";
                     }
 
@@ -101,7 +175,7 @@
                             buttons: {
                                 TAMAM: function () {
 
-                                    
+
                                 }
                             }
                         });
