--- a/AtkTennisWeb/Views/Shared/_Layout.cshtml
+++ b/AtkTennisWeb/Views/Shared/_Layout.cshtml
@@ -1,5 +1,4 @@
 ﻿
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -187,7 +186,7 @@
                         <img src="~/adminRoot/images/user1-128x128.jpg" class="img-circle elevation-2" alt="User Image">
                     </div>
                     <div class="info">
-                        <a href="#" class="d-block">Kutay Karademir</a>
+                        <a href="#" class="d-block">kk</a>
                     </div>
                 </div>
 
@@ -236,7 +235,7 @@
 
 
                                 <li class="nav-item">
-                                    <a href="~/Security/ListUsers" class="nav-link">
+                                    <a href="~/Home/ListUser" class="nav-link">
                                         <i class="far fa-circle nav-icon"></i>
                                         <p>Kullanıcı Listeleri</p>
                                     </a>
@@ -256,12 +255,12 @@
                             </a>
 
                             <ul class="nav nav-treeview">
-                                <li class="nav-item">
-                                    <a href="~/Admin/ReservationTable" class="nav-link">
-                                        <i class="fas fa-table nav-icon"></i>
-                                        <p>Rezervasyon Tablosu</p>
-                                    </a>
-                                </li>
+                                @*<li class="nav-item">
+                                        <a href="~/Admin/ReservationTable" class="nav-link">
+                                            <i class="fas fa-table nav-icon"></i>
+                                            <p>Rezervasyon Tablosu</p>
+                                        </a>
+                                    </li>*@
                                 <li class="nav-item">
                                     <a href="~/Public/Reservation" class="nav-link">
                                         <i class="fas fa-calendar-check nav-icon"></i>
@@ -411,6 +410,18 @@
     <!-- Resolve conflict in jQuery UI tooltip with Bootstrap tooltip -->
     <script>
         $.widget.bridge('uibutton', $.ui.button)
+
+        function logout() {
+
+
+
+
+            window.location.href = "../Home/Index";
+
+
+
+
+        }
     </script>
 
 
@@ -429,7 +440,7 @@
     <script src="~/adminRoot/js/demo.js"></script>
     <script src="~/adminRoot/js/dashboard.js"></script>
     <script src="~/adminRoot/js/calender.js"></script>
-
+    <script src="~/adminRoot/js/jquery.inputmask.min.js"></script>
     <script src="~/plugins/jszip/jszip.min.js"></script>
     <script src="~/plugins/pdfmake/pdfmake.min.js"></script>
     <script src="~/plugins/pdfmake/vfs_fonts.js"></script>
@@ -449,3 +460,4 @@
     <script src="~/plugins/datatables-buttons/js/buttons.colVis.min.js"></script>
 </body>
 </html>
+
