--- a/AtkTennisWeb/Views/SystemSettings/ReservationSettings.cshtml
+++ b/AtkTennisWeb/Views/SystemSettings/ReservationSettings.cshtml
@@ -42,7 +42,7 @@
                                     <tr style="text-align:center">
                                         <th>Ayar Bilgisi </th>
                                         <th>Değeri</th>
-                                        <th>İşlemler</th>
+                                        @*<th>İşlemler</th>*@
                                     </tr>
 
                                 </thead>
@@ -51,12 +51,13 @@
 
                                     @for (int i = 0; i < Model.reservationSettings.Count; i++)
                                     {
+                                        
                                         <tr style="text-align:center">
                                             <td>@Model.reservationSettings[i].ReservationSettingsInf</td>
                                             <td>@Model.reservationSettings[i].ReservationValue</td>
-                                            <td>
+                                            @*<td>
                                                 <button type="button" class="btn btn-outline-danger" id="@Model.reservationSettings[i].ReservationSettingsId" onclick="deleteResSetOpenModal(this.id)">Sil</button>
-                                            </td>
+                                            </td>*@
                                         </tr>
                                     }
 
@@ -170,7 +171,7 @@
         }).buttons().container().appendTo('#example1_wrapper .col-md-6:eq(0)');
 
         $('#example2 , #example3 , #example4').DataTable({
-            "paging": true,
+            "paging": false,
             "lengthChange": false,
             "searching": false,
             "ordering": true,
